[BUGFIX] Correct wrapping for icongroup with less

--- a/Resources/Public/Css/bootstrap3-theme.css
+++ b/Resources/Public/Css/bootstrap3-theme.css
@@ -10871,7 +10871,7 @@ body .typo3-editPanel-btn:hover,
 }
 .icongroup-item {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
   margin: 20px;
   width: 100%;
